--- a/README
+++ b/README
@@ -2,3 +2,9 @@ Map oriented admin interface for PostgreSQL
 
 TODO:
 Digest auth
+Table editing
+Map editing
+Map drawing wkt/geojson drawing
+Extensions in tree
+Icons for views, materialized views and foreign tables
+Firefox and IE support
