--- a/README
+++ b/README
@@ -8,3 +8,4 @@ Map drawing wkt/geojson drawing
 Extensions in tree
 Icons for views, materialized views and foreign tables
 Firefox and IE support
+EWKB support
